--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-requests==2.11.1
+requests>=2.11.1
 gcloud==0.17.0
 oauth2client==3.0.0
-requests-toolbelt==0.7.0
+requests-toolbelt>=0.7.0
 python-jwt==2.0.1
 pycrypto==2.6.1
